gcc/testsuite/gcc.target/msp430/function-attributes-2.c
void __attribute__((weak, interrupt(10)))
weak_interrupt_number (void) {
} /* { dg-error "argument to interrupt attribute is unsupported for weak functions" } */
